# auto-refine

./: .gitignore  LICENSE  README.md  pyproject.toml
.omx/plans/: issues-goal-tree-visualization.md  issues-hierarchical-goal-tree.md  issues-marketing-demo-redesign.md  issues-persistent-budgeted-refinement.md  issues-public-issue-triage-benchmark.md  issues-runtime-backed-demo-data.md  issues-self-refine-repo.md  prd-goal-tree-visualization.md  prd-hierarchical-goal-tree.md  prd-marketing-demo-redesign.md  prd-persistent-budgeted-refinement.md  prd-public-issue-triage-benchmark.md  prd-runtime-backed-demo-data.md  prd-self-refine-repo.md  review-goal-tree-visualization.md  review-hierarchical-goal-tree.md  review-marketing-demo-redesign.md  review-persistent-budgeted-refinement.md  review-public-issue-triage-benchmark.md  review-self-refine-repo.md  sdd-goal-tree-visualization.md  sdd-hierarchical-goal-tree.md  sdd-marketing-demo-redesign.md  sdd-persistent-budgeted-refinement.md  sdd-public-issue-triage-benchmark.md  sdd-runtime-backed-demo-data.md  sdd-self-refine-repo.md
auto_refine/: __init__.py  cli.py  config.py  decision.py  demo.py  engine.py  goal_tree.py  models.py
docs/: demo-config.json  demo-data.json  index.html
examples/github_issue_triage_public/: policy.json  task.json
marketing/: hero.md
tests/: test_decision.py  test_demo_builder.py  test_goal_tree.py  test_integration_github_issue_triage.py  test_integration_prompt_eval.py  test_integration_routing_policy.py  test_integration_self_refine_marketing.py  test_resume.py
(+27 files in other folders)
